--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,11 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "certspy"
 version = "0.2.0"
-
 description = "A Python client for the crt.sh website to retrieve subdomains information."
 readme = "README.md"
 requires-python = ">=3.7"
-
 authors = [{name = "Omar Santos", email = "santosomar@gmail.com"}]
 license = "BSD-3-Clause"
-
 dependencies = [
     "requests",
 ]
@@ -22,4 +19,4 @@ where = ["src"]
 include = ["certspy"]
 
 [project.scripts]
-certspy = 'certspy:main'
+certspy = "certspy:main"
