--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,35 +1,2 @@
 [build-system]
-requires = ["setuptools", "setuptools-scm"]
-build-backend = "setuptools.build_meta"
-
-[project]
-name = "certspy"
-name = "certspy"
-version = "0.5.0"
-description = "A Python client for the crt.sh website to retrieve subdomains information."
-readme = "README.md"
-authors = ["Omar Santos <santosomar@gmail.com>"]
-keywords = ["certificate", "crt.sh", "subdomains", "security", "osint", "reconnaissance", "certspy", "ethical hacking", "pentesting", "red teaming", "bug bounty"]
-license = "BSD-3-Clause"
-
-[tool.poetry]
-name = "certspy"
-version = "0.5.0"
-description = "A Python client for the crt.sh website to retrieve subdomains information."
-readme = "README.md"
-authors = ["Omar Santos <santosomar@gmail.com>"]
-keywords = ["certificate", "crt.sh", "subdomains", "security", "osint", "reconnaissance", "certspy", "ethical hacking", "pentesting", "red teaming", "bug bounty"]
-license = "BSD-3-Clause"
-
-
-[tool.poetry.dependencies]
-python = ">=3.7"
-requests = "^2.25.1"
-
-
-[tool.setuptools.packages.find]
-where = ["src"]
-include = ["certspy"]
-
-[project.scripts]
-certspy = "certspy:main"
+requires = ["setuptools", "wheel"]
